Skeleton-2.0.4/style.css
@charset "UTF-8";
/* CSS Document */

/* Table of contents
––––––––––––––––––––––––––––––––––––––––––––––––––
- General Content
- Typography
- Header
- Images
- Media Queries

*/

/* General Content */

a {
	text-decoration: none;
	color: white;
	opacity: 0.4;
	font-size: 0.4em;
	
}

body {
	background-color: #1d3c51;
	background-image: url(../Abstract-background-design/OLIESS00.jpg);
	color: #1d3c51;
	
}

footer {
	margin-top: 30px;
	
}

.main {
	padding-top: 3%;
	margin: 0 auto;
}

.row {
	
}

/* Typography */


h1 {
	font-family: "Crimson Text", serif;
	font-size: 5em;
	text-align: center;
	
}

h2 {
	font-family: "Crimson Text", serif;
	text-transform: uppercase;
	font-size: 1.5em;
	text-align: center;
	letter-spacing: 2px;
}

h3 {
	font-family: "Crimson Text", serif;
	font-size: 1.5em;
	text-align: center;
	text-transform: uppercase;
	letter-spacing: 2px;
	margin-left:-17px;
	margin-top: -45px;
	margin-bottom: -20px;
	
}

h4 {
	font-family: "Crimson Text", serif;
	text-transform: uppercase;
	font-size: 1.3em;
	text-align: center;
	letter-spacing: 2px;
	
}

#beauty {
	font-family: "Great Vibes", script;
	
}

#beast {
	text-transform: uppercase;
}


p {
	font-family: "Raleway", sans-serif;
}

.maptext {
	text-align: center;
	font-weight: 700;
	
}

.gold-text {
    -webkit-text-fill-color: transparent;
 background: -webkit-linear-gradient(transparent, transparent),
  url(https://raw.githubusercontent.com/caahern/beauty-and-the-beast-uc.github.io/master/Wood-close-up/text.jpg) repeat;
 background: -o-linear-gradient(transparent, transparent);
 -webkit-background-clip: text;
}

/* Header */

header {
	align-content: center;
	padding: 5% 0;
	display: block;
}

/* Images */

.hoverimg {
	width: 50%;
	margin-left:25%;
	
}

#rightcorner {
	position: fixed;
	width: 13%;
	right: 0;
	top: 0;
	
}

#leftcorner {
	
	position: fixed;
	width: 13%;
	left: 0;
	top: 0;
	
}

#imgtop {
	width: 50%;
	margin-bottom: -3%;
	
}

#imgbottom {
	width: 50%;
	margin-top: -3%;
	
	
}


.showdiv {	
	display: none;
	
}

.map {
	width: 50%;
	margin-left: 25%;
	
}

video {
	position: fixed;
	top:50%;
	left:50%;
	z-index: -1;
	min-width: 100%;
	min-height: 100%;
	width:auto;
	height: auto;
	background-size: cover;
	transform: translate(-50%, -50%);
	opacity: 0.8;
	
	
}

/* Media Queries */

/* MUSIC */

.soundIcnPlay {
        cursor: pointer;
        display: block;
    }
    
.soundIcnPause {
        cursor: pointer;
        display: block;
    }


button {
   outline: none;
   border: 0px solid;
   background: transparent;
	opacity: 0.5;
	position: fixed;
	top: 80px;
	left: -80px;

}

